SERVER-29098 ShardingTaskExecutor::scheduleRemoteCommand should not run passed callback before processing metadata